translate one more section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj</title>
+    <title data-i18n="index-title"></title>
 
     <meta name="description"
         content="Willa &quot;Owce Dwie&quot; to niezwykłe miejsce, w którym tradycja spotyka się z nowoczesnością, tworząc atmosferę pełną komfortu i relaksu. ">
@@ -328,17 +328,14 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                 class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr">
                                 <div class="gdlr-core-title-item-title-wrap">
                                     <h3 class="gdlr-core-title-item-title gdlr-core-skin-title class-test"
-                                        style="font-size: 50px; font-weight: 400; letter-spacing: 0px; text-transform: none;">
-                                        Pokoje<span
+                                        style="font-size: 50px; font-weight: 400; letter-spacing: 0px; text-transform: none;" data-i18n="index-rooms--title">
+                                        <span
                                             class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                                     </h3>
                                 </div>
                                 <span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption"
-                                    style="font-size: 20px; font-style: normal; letter-spacing: 0px; color: #94959b; margin-top: 20px;">
-                                    W naszym obiekcie znajdziesz 12 przytulnych pokoi z osobnymi łazienkami,
-                                    zapewniających wyjątkowy komfort podczas pobytu. Położenie naszego miejsca sprawia,
-                                    że stanowi doskonałą bazę wypadową do górskich przygód. Profesjonalny personel jest
-                                    gotowy zadbać o każdy detal Twojego pobytu, zapewniając niezapomniane doświadczenie.
+                                    style="font-size: 20px; font-style: normal; letter-spacing: 0px; color: #94959b; margin-top: 20px;" data-i18n="index-rooms">
+                                   
                                 </span>
                             </div>
                         </div>
@@ -393,21 +390,20 @@ Zarezerwuj<span class="tourmaster-count">0</span>
 
                                                         <h3 class="tourmaster-room-title gdlr-core-skin-title"
                                                             style="font-size: 26px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                                                            <a href="rodzinny-deluxe.html">Rodzinny Pokój Deluxe z
-                                                                Balkonem</a>
+                                                            <a href="rodzinny-deluxe.html" data-i18n="room-1"></a>
                                                         </h3>
                                                         <div class="tourmaster-info-wrap clearfix">
 
                                                             <div class="tourmaster-info tourmaster-info-guest-amount"><i
                                                                     class="gdlr-icon-group"></i><span
                                                                     class="tourmaster-tail">max
-                                                                    4 os.</span></div>
+                                                                    4 <span data-i18n="person"></span></span></div>
 
                                                         </div>
 
                                                         <a class="tourmaster-read-more tourmaster-type-text"
-                                                            href="rodzinny-deluxe.html">
-                                                            Zobacz<i class="icon-arrow-right"></i>
+                                                            href="rodzinny-deluxe.html" data-i18n="watch">
+                                                            <i class="icon-arrow-right"></i>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -435,21 +431,20 @@ Zarezerwuj<span class="tourmaster-count">0</span>
 
                                                         <h3 class="tourmaster-room-title gdlr-core-skin-title"
                                                             style="font-size: 26px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                                                            <a href="rodzinny-premiere.html">Rodzinny Pokój Premiere z
-                                                                Balkonem</a>
+                                                            <a href="rodzinny-premiere.html" data-i18n="room-2"></a>
                                                         </h3>
                                                         <div class="tourmaster-info-wrap clearfix">
 
                                                             <div class="tourmaster-info tourmaster-info-guest-amount"><i
                                                                     class="gdlr-icon-group"></i><span
                                                                     class="tourmaster-tail">max
-                                                                    4 os.</span></div>
+                                                                    4 <span data-i18n="person"></span></span></div>
 
                                                         </div>
 
                                                         <a class="tourmaster-read-more tourmaster-type-text"
-                                                            href="rodzinny-premiere.html">
-                                                            Zobacz<i class="icon-arrow-right"></i>
+                                                            href="rodzinny-premiere.html" data-i18n="watch">
+                                                            <i class="icon-arrow-right"></i>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -477,21 +472,20 @@ Zarezerwuj<span class="tourmaster-count">0</span>
 
                                                         <h3 class="tourmaster-room-title gdlr-core-skin-title"
                                                             style="font-size: 26px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                                                            <a href="dwuosobowy-deluxe.html">Dwuusobowy Pokój Deluxe z
-                                                                Balkonem</a>
+                                                            <a href="dwuosobowy-deluxe.html" data-i18n="room-3"></a>
                                                         </h3>
                                                         <div class="tourmaster-info-wrap clearfix">
 
                                                             <div class="tourmaster-info tourmaster-info-guest-amount"><i
                                                                     class="gdlr-icon-group"></i><span
                                                                     class="tourmaster-tail">max
-                                                                    2 os.</span></div>
+                                                                    2 <span data-i18n="person"></span></span></div>
 
                                                         </div>
 
                                                         <a class="tourmaster-read-more tourmaster-type-text"
-                                                            href="dwuosobowy-deluxe.html">
-                                                            Zobacz<i class="icon-arrow-right"></i>
+                                                            href="dwuosobowy-deluxe.html" data-i18n="watch">
+                                                            <i class="icon-arrow-right"></i>
                                                         </a>
                                                     </div>
                                                 </div>
@@ -546,8 +540,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     >
                     <div class="gdlr-core-title-item-title-wrap">
                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title class-test"
-                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                            Darmowe Wi-Fi<span
+                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;" data-i18n="icon-1">
+                           <span
                                 class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                         </h3>
                     </div>
@@ -579,8 +573,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     >
                     <div class="gdlr-core-title-item-title-wrap">
                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title class-test"
-                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                            Śniadania w formie bufetu<span
+                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;" data-i18n="icon-2">
+                           <span
                                 class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                         </h3>
                     </div>
@@ -612,8 +606,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     >
                     <div class="gdlr-core-title-item-title-wrap">
                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title class-test"
-                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                            Darmowy Parking<span
+                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;" data-i18n="icon-3">
+                            <span
                                 class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                         </h3>
                     </div>
@@ -646,8 +640,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     >
                     <div class="gdlr-core-title-item-title-wrap">
                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title class-test"
-                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                            Sauna fińska<span
+                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;" data-i18n="icon-4">
+                            <span
                                 class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                         </h3>
                     </div>
@@ -680,8 +674,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     >
                     <div class="gdlr-core-title-item-title-wrap">
                         <h3 class="gdlr-core-title-item-title gdlr-core-skin-title class-test"
-                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;">
-                            Sauna infrared<span
+                            style="font-size: 25px; font-weight: 500; letter-spacing: 0px; text-transform: none;" data-i18n="icon-5">
+                           <span
                                 class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
                         </h3>
                     </div>
