translate about page

--- a/galeria.html
+++ b/galeria.html
@@ -823,12 +823,12 @@ Zarezerwuj<span class="tourmaster-count">0</span>
 
         <div class="footer__columns">
             <div class="footer__columns-box">
-                <h6>Adres:</h6>
+                <h6 data-i18n="address"></h6>
                 <span>Zwierzyniecka 9</span>
                 <span>34-500 Zakopane</span>
             </div>
             <div class="footer__columns-box">
-                <h6>Kontakt:</h6>
+                <h6 data-i18n="contact"></h6>
                 <a href="tel:48696770000">+48 696 770 000</a>
                 <a href="mailto:hello@owcedwie.pl">hello@owcedwie.pl</a>
             </div>
@@ -837,7 +837,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
     </div>
     <div class="footer__author">
         <span>©<span class="footer__year"></span> Owce Dwie</span>
-        <span>Wykonanie <a href="https://marketingmix.pl" target="_blank">MarketingMix</a></span>
+        <span> <span data-i18n="created"> </span><a href="https://marketingmix.pl" target="_blank">MarketingMix</a></span>
     </div>
     </div>
 </footer>
