--- a/o-nas.html
+++ b/o-nas.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>O nas | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj</title>
+    <title data-i18n="index-about-title"></title>
     <meta name="description" content="Willa &quot;Owce Dwie&quot; to niezwykłe miejsce, w którym tradycja spotyka się z nowoczesnością, tworząc atmosferę pełną komfortu i relaksu. ">
    
 
@@ -265,7 +265,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
     <div class="hotale-page-title-overlay"></div>
     <div class="overlay"></div>
     <div class="hotale-page-title-container hotale-container">
-        <div class="hotale-page-title-content hotale-item-pdlr"><h1 class="hotale-page-title">O nas</h1></div>
+        <div class="hotale-page-title-content hotale-item-pdlr"><h1 class="hotale-page-title" data-i18n="about-title"></h1></div>
     </div>
 </div> 
 
@@ -286,8 +286,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                     id="gdlr-core-title-item-1"
                                 >
                                 <div class="gdlr-core-title-item-title-wrap">
-                                    <h1 class="gdlr-core-title-item-title gdlr-core-skin-title class-test" style="font-size: 50px; font-weight: 400; letter-spacing: 0px; text-transform: none;">
-                                        Witaj na stronie Owce Dwie<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span>
+                                    <h1 class="gdlr-core-title-item-title gdlr-core-skin-title class-test" style="font-size: 50px; font-weight: 400; letter-spacing: 0px; text-transform: none;" data-i18n="about-title-2">
+                                        <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span>
                                     </h1>
                                 </div>
                                 </div>
@@ -302,7 +302,8 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                             <div class="gdlr-core-pbf-element">
                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align gdlr-core-no-p-space">
                                     <div class="gdlr-core-text-box-item-content" style="font-size: 21px; font-weight: 400; letter-spacing: 0px; text-transform: none; color: #898989;">
-                                        <p>Twój wymarzony pobyt zaczyna się tutaj.<br>Odkryj przyjemność w każdym detalu.</p>
+                                        <p data-i18n="about-subtitle-1"></p>
+                                        <p data-i18n="about-subtitle-2"></p>
                                     </div>
                                 </div>
                             </div>
@@ -377,7 +378,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     style="padding-bottom: 20px;">
                     <div class="gdlr-core-text-box-item-content"
                         style="font-size: 18px; font-weight: 400; text-transform: none; color: black;">
-                        <div>Willa <strong>Owce Dwie</strong> to niezwykłe miejsce, w którym tradycja spotyka się z nowoczesnością, tworząc atmosferę pełną komfortu i relaksu. Położona w otoczeniu szlaków, tuż obok Skoczni, willa oferuje niezapomniane widoki, które zaspokoją nawet najbardziej wymagających Gości.</div>
+                        <div data-i18n="about-p-1"></div>
                     </div>
                 </div>
             </div>
@@ -432,7 +433,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     style="padding-bottom: 20px;">
                     <div class="gdlr-core-text-box-item-content"
                         style="font-size: 18px; font-weight: 400; text-transform: none; color: black;">
-                        <div>Wnętrza Willi <strong>Owce Dwie</strong> to harmonijne połączenie nowoczesnego designu z elementami charakterystycznymi dla stylu góralskiego. Starannie dobrany wystrój sprawia, że każdy detal oddaje unikalny urok tego miejsca. Codziennie nasz zaangażowany personel dba o to, aby nasi Goście doświadczali pełni relaksu i satysfakcji podczas pobytu.</div>
+                        <div data-i18n="about-p-2"></div>
                     </div>
                 </div>
             </div>
@@ -488,7 +489,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     style="padding-bottom: 20px;">
                     <div class="gdlr-core-text-box-item-content"
                         style="font-size: 18px; font-weight: 400; text-transform: none; color: black;">
-                        <div>Ponadto, każdego dnia zapewniamy naszym Gościom urozmaicone śniadania, dostosowane do różnorodnych gustów i preferencji. <strong>Owce Dwie</strong> nie tylko zapewniają wyjątkowe doświadczenie wizualne, ale również kulinarną przyjemność, dbając o zaspokojenie podniebienia każdego Gościa.</div>
+                        <div data-i18n="about-p-3"></div>
                     </div>
                 </div>
             </div>
@@ -543,7 +544,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                     style="padding-bottom: 20px;">
                     <div class="gdlr-core-text-box-item-content"
                         style="font-size: 18px; font-weight: 400; text-transform: none; color: black;">
-                        <div>Willa <strong>Owce Dwie</strong> to miejsce, gdzie tradycja, piękno przyrody i nowoczesność łączą się, tworząc niepowtarzalną atmosferę idealną do wypoczynku i relaksu.</div>
+                        <div data-i18n="about-p-4"></div>
                     </div>
                 </div>
             </div>
@@ -606,12 +607,12 @@ Zarezerwuj<span class="tourmaster-count">0</span>
 
         <div class="footer__columns">
             <div class="footer__columns-box">
-                <h6>Adres:</h6>
+                <h6 data-i18n="address"></h6>
                 <span>Zwierzyniecka 9</span>
                 <span>34-500 Zakopane</span>
             </div>
             <div class="footer__columns-box">
-                <h6>Kontakt:</h6>
+                <h6 data-i18n="contact"></h6>
                 <a href="tel:48696770000">+48 696 770 000</a>
                 <a href="mailto:hello@owcedwie.pl">hello@owcedwie.pl</a>
             </div>
@@ -620,7 +621,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
     </div>
     <div class="footer__author">
         <span>©<span class="footer__year"></span> Owce Dwie</span>
-        <span>Wykonanie <a href="https://marketingmix.pl" target="_blank">MarketingMix</a></span>
+        <span> <span data-i18n="created"> </span><a href="https://marketingmix.pl" target="_blank">MarketingMix</a></span>
     </div>
     </div>
 </footer>
