--- a/pokoje.html
+++ b/pokoje.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Nasze Pokoje | Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj</title>
+    <title data-i18n="index-rooms-title"></title>
     <meta name="description" content="Willa &quot;Owce Dwie&quot; to niezwykłe miejsce, w którym tradycja spotyka się z nowoczesnością, tworząc atmosferę pełną komfortu i relaksu. ">
 
 
@@ -263,7 +263,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
     <div class="hotale-page-title-overlay"></div>
     <div class="overlay"></div>
     <div class="hotale-page-title-container hotale-container">
-        <div class="hotale-page-title-content hotale-item-pdlr"><h1 class="hotale-page-title">Pokoje</h1></div>
+        <div class="hotale-page-title-content hotale-item-pdlr"><h1 class="hotale-page-title" data-i18n="rooms-title"></h1></div>
     </div>
 </div>
         <div class="hotale-page-wrapper" id="hotale-page-wrapper">
@@ -294,19 +294,18 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                         style="padding-top: 35px; padding-bottom: 40px; padding-left: 60px;">
                                         <h3 class="tourmaster-room-title gdlr-core-skin-title"
                                             style="font-size: 30px; font-weight: 500; text-transform: none;">
-                                            <a href="rodzinny-deluxe.html">Rodzinny Pokój Deluxe
-                                                z Balkonem</a>
+                                            <a href="rodzinny-deluxe.html" data-i18n="room-1"></a>
                                         </h3>
                                         <div class="tourmaster-info-wrap clearfix">
                                             <div class="tourmaster-info tourmaster-info-guest-amount"><i
                                                     class="gdlr-icon-group"></i><span class="tourmaster-tail">max 4
-                                                    os.</span></div>
+                                                 <span data-i18n="person"></span></span></div>
 
                                         </div>
-                                        <div class="tourmaster-room-content">Wyposażony jest w dwuosobowe łóżko, rozkładaną sofę, szafę, biurko, tv, sejf i łazienkę z prysznicem.</div>
+                                        <div class="tourmaster-room-content" data-i18n="rooms-desc"></div>
                                         <div class="tourmaster-bottom">
                                             <a class="tourmaster-read-more tourmaster-type-text"
-                                                href="rodzinny-deluxe.html">Zobacz<i
+                                                href="rodzinny-deluxe.html" data-i18n="check"><i
                                                     class="icon-arrow-right"></i></a>
 
                                         </div>
@@ -331,19 +330,18 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                         style="padding-top: 35px; padding-bottom: 40px; padding-left: 60px;">
                                         <h3 class="tourmaster-room-title gdlr-core-skin-title"
                                             style="font-size: 30px; font-weight: 500; text-transform: none;">
-                                            <a href="rodzinny-premiere.html">Rodzinny Pokój
-                                                Premiere z Balkonem</a>
+                                            <a href="rodzinny-premiere.html" data-i18n="room-2"></a>
                                         </h3>
                                         <div class="tourmaster-info-wrap clearfix">
                                             <div class="tourmaster-info tourmaster-info-guest-amount"><i
                                                     class="gdlr-icon-group"></i><span class="tourmaster-tail">max 4
-                                                    os.</span></div>
+                                                    <span data-i18n="person"></span></span></div>
 
                                         </div>
-                                        <div class="tourmaster-room-content">Wyposażony jest w dwuosobowe łóżko, rozkładaną sofę, szafę, biurko, tv, sejf i łazienkę z prysznicem.</div>
+                                        <div class="tourmaster-room-content" data-i18n="rooms-desc"></div>
                                         <div class="tourmaster-bottom">
                                             <a class="tourmaster-read-more tourmaster-type-text"
-                                                href="rodzinny-premiere.html">Zobacz<i
+                                                href="rodzinny-premiere.html" data-i18n="check"><i
                                                     class="icon-arrow-right"></i></a>
 
                                         </div>
@@ -366,19 +364,19 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                                         style="padding-top: 35px; padding-bottom: 40px; padding-left: 60px;">
                                         <h3 class="tourmaster-room-title gdlr-core-skin-title"
                                             style="font-size: 30px; font-weight: 500; text-transform: none;">
-                                            <a href="dwuosobowy-deluxe.html">Dwuosobowy Pokój Deluxe z Balkonem</a>
+                                            <a href="dwuosobowy-deluxe.html" data-i18n="room-3"></a>
                                         </h3>
                                         <div class="tourmaster-info-wrap clearfix">
                                             <div class="tourmaster-info tourmaster-info-guest-amount"><i
                                                     class="gdlr-icon-group"></i><span class="tourmaster-tail">max 2
-                                                    os.</span></div>
+                                                    <span data-i18n="person"></span></span></div>
 
                                         </div>
-                                        <div class="tourmaster-room-content">Wyposażony jest w dwuosobowe łóżko, szafę, biurko, tv, sejf i łazienkę z prysznicem.
+                                        <div class="tourmaster-room-content" data-i18n="rooms-desc-2">
                                         </div>
                                         <div class="tourmaster-bottom">
                                             <a class="tourmaster-read-more tourmaster-type-text"
-                                                href="dwuosobowy-deluxe.html">Zobacz<i
+                                                href="dwuosobowy-deluxe.html" data-i18n="check"><i
                                                     class="icon-arrow-right"></i></a>
 
                                         </div>
