add more translate

--- a/galeria.html
+++ b/galeria.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Willa Owce Dwie - Twój wymarzony pobyt zaczyna się tutaj</title>
+    <title data-i18n="index-gallery-title"></title>
     <meta name="description"
         content="Willa &quot;Owce Dwie&quot; to niezwykłe miejsce, w którym tradycja spotyka się z nowoczesnością, tworząc atmosferę pełną komfortu i relaksu. ">
 
@@ -265,7 +265,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                 <div class="overlay"></div>
                 <div class="hotale-page-title-container hotale-container">
                     <div class="hotale-page-title-content hotale-item-pdlr">
-                        <h1 class="hotale-page-title">Galeria </h1>
+                        <h1 class="hotale-page-title" data-i18n="gallery-title"></h1>
                     </div>
                 </div>
             </div>
@@ -276,13 +276,13 @@ Zarezerwuj<span class="tourmaster-count">0</span>
                    >
                     <button
                         class="item-link gdlr-core-button gdlr-core-button-solid gdlr-core-center-align gdlr-core-button-no-border btn--primary"
-                        data-name="rodzinny-deluxe">rodzinny deluxe</button>
+                        data-name="rodzinny-deluxe" data-i18n="gallery-item-1"></button>
                         <button
                         class="item-link gdlr-core-button gdlr-core-button-solid gdlr-core-center-align gdlr-core-button-no-border btn--primary"
-                        data-name="rodzinny-premiere">rodzinny premiere</button>
+                        data-name="rodzinny-premiere" data-i18n="gallery-item-1"></button>
                     <button
                         class="item-link gdlr-core-button gdlr-core-button-solid gdlr-core-center-align gdlr-core-button-no-border btn--primary"
-                        data-name="dwuosobowy">dwuosobowy</button>
+                        data-name="dwuosobowy" data-i18n="gallery-item-1"></button>
 
                     
 
@@ -845,8 +845,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
      <div class="cookie-bar " style="z-index: 10000;" id="cookieBox">
     <div class="cookie-bar__container">
 
-        <p>Ta witryna używa plików cookie, aby zapewnić Ci najlepsze doświadczenie podczas korzystania z naszej
-            platformy. Kontynuując przeglądanie naszej witryny, wyrażasz zgodę na korzystanie z plików cookie.</p>
+        <p data-i18n="cookie-bar"></p>
         <div class="cookie-bar__actions">
             <a href="" target="_blank">Dowiedz się więcej</a>
             <button type="button" id="acceptBtn">OK</button>
