--- a/index.html
+++ b/index.html
@@ -1311,8 +1311,7 @@ Zarezerwuj<span class="tourmaster-count">0</span>
      <div class="cookie-bar " style="z-index: 10000;" id="cookieBox">
     <div class="cookie-bar__container">
 
-        <p>Ta witryna używa plików cookie, aby zapewnić Ci najlepsze doświadczenie podczas korzystania z naszej
-            platformy. Kontynuując przeglądanie naszej witryny, wyrażasz zgodę na korzystanie z plików cookie.</p>
+        <p data-i18n="cookie-bar"></p>
         <div class="cookie-bar__actions">
             <a href="" target="_blank">Dowiedz się więcej</a>
             <button type="button" id="acceptBtn">OK</button>
