--- a/rodzinny-deluxe.html
+++ b/rodzinny-deluxe.html
@@ -171,12 +171,12 @@
                     
                     </div>
                     <div class="tourmaster-currency-switcher">
-                        <span class="tourmaster-head"><span style="color:white">PL</span><i class="fa fa-sort-down" style="color:white"></i></span>
+                        <span class="tourmaster-head"><span style="color:white">PL/ENG</span><i class="fa fa-sort-down" style="color:white"></i></span>
                         <div class="tourmaster-currency-switcher-inner">
                             <div class="tourmaster-currency-switcher-content">
                                 <ul>
-                                    <li><a href="index.html" onclick="changeLanguage('pl')">Polski</a></li>
-                                    <li><a href="index.html" onclick="changeLanguage('en')">English</a></li>
+                                    <li><a href="/" onclick="changeLanguage('pl')">Polski</a></li>
+                                    <li><a href="/" onclick="changeLanguage('en')">English</a></li>
                                    
                                   </ul>
                             </div>
